fix error establishement and enterprise when create a new one
